@@ -1,6 +1,8 @@
 devscripts (2.10.40) UNRELEASED; urgency=low
 
   [ Adam D. Barratt ]
+  * bts: Update the manpage to mention local caching in the description
+    section and correct a typo. (Closes: #499397)
   * cowpoke:
     + Update to new upstream version
       - Multiple architecture and distribution support.
